--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -9,16 +9,12 @@
 
 			<div class="row index-banner">
 	  		<div id="index-banner-carousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-        	{{range .Banners}}
-          <li data-target="#index-banner-carousel" data-slide-to="0" class="active"></li>
-          {{end}}
-        </ol>
         <div class="carousel-inner" role="listbox">
-        	{{range .Banners}}
-          <div class="item active">
-          	<a href="{{.Target}}">
-            	<img src="https://ury.org.uk{{.URL}}" alt="{{.Alt}}">
+          {{range $index, $Banners := .Banners}}
+          
+          <div class="item {{ if eq $index 0 }} active {{end}}">
+          	<a href="{{$Banners.Target}}">
+            	<img src="https://ury.org.uk{{$Banners.URL}}" alt="{{$Banners.Alt}}">
             </a>
           </div>
           {{end}}
@@ -74,8 +70,96 @@
     </div> <!-- /outer containter -->
     
     <div class="container outer index-schedule">
-		<h2>Today's Schedule</h2>
-	  	<h1 style="text-align:center; padding: 7em 0;">Coming Soon</h1>
+		  <h2>Today's Schedule</h2>
+	  	<h1 style="text-align:center; padding: 7em 0;">Coming Soon</h3>
+
+    </div> <!-- /outer containter -->
+
+    <div class="container outer index-videos">
+      <div class="scroll-container">
+        <div class="scroll-body">
+          <h2>URY Sessions</h2>
+          <div class="row">
+            <div class="col-sm-5 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
+              </div>
+            </div>
+            <div class="col-sm-5 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
+              </div>
+            </div>
+            <div class="col-sm-5 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
+              </div>
+            </div>
+            <div class="col-sm-5 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
+              </div>
+            </div>
+            <div class="col-sm-5 col-md-4 col-lg-3">
+              <div class="thumbnail">
+                <img src="http://img.youtube.com/vi/y2fCIG0l144/maxresdefault.jpg" alt="...">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="scroll-right">
+            &gt;
+        </div>
+      </div>
+
+    </div> <!-- /outer containter -->
+    
+    <div class="container outer index-uryplayer">
+      <div class="scroll-container">
+        <div class="scroll-body">
+          <h2>URY Player: Podcasts</h2>
+          <div class="row">
+            <div class="col-sm-4 col-md-3 col-lg-2">
+              <div class="thumbnail">
+                <p class="podcast-title">Thumbnail label</p>
+                <img src="images/show-current.png" alt="...">
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-2">
+              <div class="thumbnail">
+                <p class="podcast-title">Thumbnail label</p>
+                <img src="images/show-current.png" alt="...">
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-2">
+              <div class="thumbnail">
+                <p class="podcast-title">Thumbnail label</p>
+                <img src="images/show-current.png" alt="...">
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-2">
+              <div class="thumbnail">
+                <p class="podcast-title">Thumbnail label</p>
+                <img src="images/show-current.png" alt="...">
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
+              </div>
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-2">
+              <div class="thumbnail">
+                <p class="podcast-title">Thumbnail label</p>
+                <img src="images/show-current.png" alt="...">
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over af snackwave marfa gluten-free affogato truffaut iceland. Yuccie bushwick etsy, fingerstache kombucha biodiesel chambray brunch skateboard polaroid mixtape deep v mustache.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="scroll-right">
+            &gt;
+        </div>
+      </div>
 
     </div> <!-- /outer containter -->
 	
