--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,11 +45,15 @@ body {
   border-top: 3px solid #ddd;
   background: $content-bg-1;
 }
+.navbar-container {
+    max-width:1200px;
+    margin-right:15px;
+}
 .navbar {
   background: $primary-color;
-}
-.navbar img {
-  margin-top: -7px;
+  img {
+    margin-top: -7px;
+  }
 }
 
 .index-infobar {
