--- a/views/elements/navbar.tmpl
+++ b/views/elements/navbar.tmpl
@@ -1,7 +1,7 @@
 {{define "navbar"}}
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <div class="navbar-container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">{{.PageContext.ShortName}}</span>
