Add hidden y scrolling
Prevents scrolling in the y direction

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -93,6 +93,7 @@ body {
       z-index: 1;
       [class*="row"] {
         overflow-x: scroll;
+        overflow-y: hidden; 
         margin-right:-70px;
       }
       [class*="col"] {
