--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -71,12 +71,130 @@
     
     <div class="container outer index-schedule">
 		  <h2>Today's Schedule</h2>
-	  	<h1 style="text-align:center; padding: 7em 0;">Coming Soon</h3>
-
+	  	<h3 style="text-align:center;">We're not broadcasting today, we'll be back on !!DATE!!.</h3>
+      <p style="text-align:center;">In the meantime, how about some On Demand content?</p>
+      <div class="container">
+        <div class="row">  
+            <figure class="col-md-6 large">
+              <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>	
+                </figcaption>
+            </figure>
+          <div class="col-md-6 small">
+            <div class="row">
+              <figure class="col-md-6">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-6">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+            </div>
+            <div class="row">
+              <figure class="col-md-6">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-6">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+        </div>
+        <div class="row small">
+          <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+        </div>
+        <div class="row small">
+          <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+              <figure class="col-md-3">
+                <img src="images/show-current.png" alt="img01">
+                <figcaption>
+                  <h3>!!Show Name!!</h3>
+                  <span>12:00 - 14:00</span>
+                  <p>Bicycle rights humblebrag pinterest viral trust fund, freegan flexitarian butcher subway tile meditation tbh. Hoodie leggings heirloom, pinterest shoreditch man bun pour-over</p>
+                </figcaption>
+              </figure>
+        </div>
+      </div>
     </div> <!-- /outer containter -->
 
     <div class="container outer index-videos">
-      <div class="scroll-container">
+      <div id="video-container" class="scroll-container">
         <div class="scroll-body">
           <h2>URY Sessions</h2>
           <div class="row">
