--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -1,67 +1,116 @@
 {{define "content"}}
 	{{with .PageData}}
 
-	<div class="container">
 
-		<h1>{{.Timeslot.Title}} </h1>
+	<div class="container outer header-large current-next">
+		<div class="container mobile-hide">
+		</div>
+	</div>
+	
+	<div class="container outer page1-content">
+		<div class="container">
+		  <div class="row">
+	        <div class="col-xs-12 col-sm-4 page1-sidebar">
+	        	<img class="img-responsive page1-image" src="
+					      {{if .Timeslot.Season.ShowMeta.Photo}}
+									https://ury.org.uk{{.Timeslot.Season.ShowMeta.Photo}}
+								{{else}}
+									/images/show-current.png
+								{{end}}	
+							" alt="
+								{{.Timeslot.Title}} Logo
+							">
+							<a href="#">
+								<h1 class="mobile-only">
+									{{.Timeslot.Title}}
+								</h1>
+							</a>
+	          	<h3>Duration: {{.Timeslot.Duration}}</h3><h3>Shows: 10</h3>
+							<h2>Tags</h3>
+								{{range .Timeslot.Tags}}
+								<a href="/search?term={{.}}" alt="Search for '{{.}}'.">
+									<span class="label label-default">
+									{{.}}
+									</span>
+								</a>
+								{{end}}
+	        </div>
 
-		<small>{{.Timeslot.StartTime}}</small>
+	        <div class="col-xs-12 col-sm-8">
+						<a href="{{.Timeslot.Season.ShowMeta.MicroSiteLink.URL}}">
+							<h1 class="mobile-hide page1-title">
+								{{.Timeslot.Title}}
+							</h1>
+						</a>
+						<h2>{{.Timeslot.StartTime.Format "Monday, _2 Jan 2006 - 15:04"}}</h2>
+	          <hr>
+	          <!-- <div class="page1-bio-box">  Do we want the bio in a blue box? -->
+				  		<h2 class="page1-subtitle">Description</h2>
+				  		<p>
+								{{html .Timeslot.Description}}
+							</p>
 
-		<h2>
-			Credits
-		</h2>
+			  		<!-- </div> -->
+						
+	        </div>
 
-		<ul>
-
-		{{range .Timeslot.Credits}}
-
-			<li>
-				<a href="/people/{{.MemberID}}">{{.User.Fname}} {{.User.Sname}}</a>
-			</li>
-
+	      </div>
+	    </div>
+	  </div> <!-- /outer containter -->
+		{{if .MixcloudAvailable}}
+			<div class="container outer page1-on-demand">
+				<h2>
+					URY on Tap: Listen Again
+				</h2>
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-7">
+							<h3>Some cool text about the fact that this show is on URY OnDemand!</h3>
+						</div>
+						<div class="col-sm-5">
+							<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed={{.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>				
+						</div>
+					</div>
+					<a href="#">Listen to more shows on URY On Demand</a>
+				</div>
+			</div> <!-- /outer containter -->
 		{{end}}
+		{{if .Timeslot.Credits}}
+	  <div class="container outer page1-credits-people">
+			<h2>Credits</h2>
+	  	{{range .Timeslot.Credits}}
+				<a href="/people/{{.User.Memberid}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
+			{{end}}
 
-		</ul>
-
+    </div> <!-- /outer containter -->
+		{{end}}
 		{{if .Tracklist}}
-
-		<h2>
-			Tracklist
-		</h2>
-
-		<table class="table">
-			<thead>
-			<tr>
-				<th>Track</th>
-				<th>Artist</th>
-				<th>Time</th>
-			</tr>
-			</thead>
-			<tbody>
-			{{range .Tracklist}}
-			<tr>
-				<td>{{.Title}}</td>
-				<td>{{.Artist}}</td>
-				<td>{{.StartTime.Format "15:04"}}</td>
-			</tr>
-			{{end}}
-			</tbody>
-
-		</table>
-
+		<div class="container outer page1-tracklist">
+			<div class="container">
+				<h2>
+					Tracklist
+				</h2>
+				<table class="table">
+					<thead>
+					<tr>
+						<th>Track</th>
+						<th>Artist</th>
+						<th>Time</th>
+					</tr>
+					</thead>
+					<tbody>
+					{{range .Tracklist}}
+					<tr>
+						<td>{{.Title}}</td>
+						<td>{{.Artist}}</td>
+						<td>{{.StartTime.Format "15:04"}}</td>
+					</tr>
+					{{end}}
+					</tbody>
+				</table>
+			</div>
+		</div> <!-- /outer containter -->		
 		{{end}}
-
-		<h3>
-			Tags
-		</h3>
-
-		<p>
-			{{range .Timeslot.Tags}}
-			{{.}}
-			{{end}}
-		</p>
-
-	</div><!-- /.container -->
 
 	{{end}}
 {{end}}
