Shows with no URL won't link any more.

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -24,7 +24,15 @@
 
 {{define "current_next"}}
 
-<h3><a href="{{.Url}}">{{.Title}}</a></h3>
+<h3>
+	{{if .Url}}
+		<a href="{{.Url}}">
+	{{end}}
+	{{.Title}}
+	{{if .Url}}
+		</a>
+	{{end}}
+</h3>
 <h4>{{.StartTime.Format "15:04"}} - {{.EndTime.Format "15:04"}}</h4>
 
 {{end}}
