--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,11 +1,9 @@
+@import "varaibles";
 @import "vendor/vendor";
 @import "partials/partials";
 @import "elements/elements";
 
-$primary-color: rgba(0, 51, 103, 1);
-$secondary-color: rgba(1, 26, 50, 1);
-$third-color: rgba(2, 33, 63, 1);
-$content-bg-1: #e1e1e1;
+
 
 /* Space out content a bit */
 
