--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -7,8 +7,8 @@
 			{{template "current_and_next" .}}
 
 
-			<div class="row index-banner">
-	  		<div id="index-banner-carousel" class="carousel slide" data-ride="carousel">
+			<div class="row banner">
+			<div id="banner-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" role="listbox">
           {{range $index, $Banners := .Banners}}
           
@@ -19,11 +19,11 @@
           </div>
           {{end}}
         </div>
-        <a class="left carousel-control" href="#index-banner-carousel" role="button" data-slide="prev">
+        <a class="left carousel-control" href="#banner-carousel" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#index-banner-carousel" role="button" data-slide="next">
+        <a class="right carousel-control" href="#banner-carousel" role="button" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
