correct 404 page units

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -200,8 +200,8 @@ body {
 	}
 	.page404 h1 {
 		font-size:200px;
-		padding-top: 25vw;
-		padding-bottom: 25vw;
+		padding-top: 25vh;
+		padding-bottom: 25vh;
 	}
 	.page404 .spinner {
 		display:inline-block;
