--- a/sass/main.scss
+++ b/sass/main.scss
@@ -194,27 +194,27 @@ body {
   background-color: $secondary-color;
   color: white;
 }
-	.page404 {
-	 text-align:center;
-	 margin: 0 auto;
-	}
-	.page404 h1 {
-		font-size:200px;
-		padding-top: 25vh;
+.page404 {
+  text-align:center;
+  margin: 0 auto;
+  h1 {
+    font-size:25vmin;
+    padding-top: 25vh;
 		padding-bottom: 25vh;
 	}
-	.page404 .spinner {
+	.spinner {
 		display:inline-block;
-		width:160px;
-		height:160px;
-		font-size:50px;
-		text-align:center;
+		width:25vmin;
+		height:25vmin;
+		position: relative;
+    top: 6vmin;
 		-webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 4s linear infinite;
     background: url("/images/URYrecord.png") center center;
     background-size: contain;
 	}
+}
 
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
