--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -22,6 +22,7 @@
   }
   .current-and-next-now, .current-and-next-next {
     flex-grow: 1; 
+    flex-basis: 0;
     padding: 0 1em;
     min-width: 15em;
     flex-wrap: wrap;
@@ -35,6 +36,9 @@
 }
 
 @media screen and (max-width: 767px) {
+  .current-and-next-now, .current-and-next-next {
+    flex-basis: auto!important;
+  }
   .current-and-next-btn-mobile {
     flex-basis: 100%;
     order:5;
@@ -70,5 +74,5 @@ h2 {
   font-size: 2em;
 }
 h3 {
-  font-size: 1.8em;
+  font-size: 1.5em;
 }
