Added OnDemand (Mixcloud) to timeslot pages and interactive season / episode list to show pages.

--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -21,6 +21,7 @@
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.10.13/css/jquery.dataTables.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -42,6 +43,8 @@
 <script src="/bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/bower_components/moment/moment.js"></script>
 <script src="/bower_components/jquery-ui/jquery-ui.js"></script>
+<script src="https://cdn.datatables.net/1.10.13/js/jquery.dataTables.min.js"></script>
+
 <!-- endbower -->
 
 <script src="/scripts/main.min.js"></script>
