--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -191,10 +191,99 @@ body {
 .page1-credits-people {
 	background-color: $primary-color;
 	color: white;
+
+  .cards {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .cards__item {
+    display: flex;
+    padding: 1rem;
+    @media(min-width: 40rem) {
+      width: 50%;
+    }
+    @media(min-width: 56rem) {
+      width: 33.3333%;
+    }
+  }
+
+  .card {
+    width: 100%;
+    background-color: $third-color;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0,0,0,0.25);
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+    &:hover {
+      .card__image {
+        filter: contrast(100%);
+      }
+    }
+  }
+  
+  .card__content {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    padding: 1em;
+  }
+  .card__title {
+    font-size: 1.50em;
+    font-weight: 300;
+  }
+
+  .card__text {
+    flex: 1 1 auto;
+  }
+
+  .credit-thumb {
+    height:50px;
+    border: #e1e1e1 3px solid;
+  }
+
+
+
 }
 .page1-on-demand {
   background-color: $secondary-color;
   color: white;
+  .col-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .seasons {
+    background: $third-color;
+  }
+  #timeslotList, #timeslotLatest {
+    background: $primary-color;
+  }
+
+  .page1-timeslots-table {
+    width:100% !important;
+    margin-left:-15px;
+    margin-right:-15px;
+    thead {
+      display: none;
+    }
+    tr {
+      background:$primary-color;
+      td:first-of-type {
+        font-size:1.5em;
+        text-align: center;
+        background: #032eF0
+      }
+    }
+    tr.odd {
+      background: $third-color;
+    }
+    
+    
+  }
 }
 	.page404 {
 	 text-align:center;
