--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -1,11 +1,29 @@
 .btn {
-    border-radius: 0.4em;
-    padding: 0.25em 1em;
-    font-family: Raleway-Medium;
-    font-size: $base-font-size;
+  border-radius: 0.4em;
+  padding: 0.25em 1em;
+  font-family: Raleway-Medium;
+  font-size: $base-font-size;
+  box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
 
-    &.btn-primary {
-        background: $blue;
-        color: #FFFFFF;
+  &.btn-primary {
+    background: $blue;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+
+    &:hover {
+    background: #FFFFFF;
+    color: $blue;
     }
+  }
+
+  &.btn-red {
+    background: $red;
+    color: #FFFFFF;
+    border: 2px solid #FFFFFF;
+
+    &:hover {
+    background: #FFFFFF;
+    color: $red;
+    }
+  }
 }
