--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,4 +1,8 @@
 @import "variables";
-@import "fonts";
-@import "headings";
+@import "typography";
 @import "buttons";
+
+
+html {
+    font-size: $base-font-size;
+}
