Made current show image actually work

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -3,7 +3,7 @@
 		<div class="current-and-next">
 			{{if .Current}}
 				<div class="current-and-next-img">
-					<img src="/images/show-current.png" alt="" />
+					<img src="{{if .Current.Photo}}https://ury.org.uk/{{.Current.Photo}}{{else}}/images/show-current.png{{end}}" alt="" />
 					<a href="https://ury.org.uk/listen" class="btn btn-lg btn-primary current-and-next-btn mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
 				</div>
 				<div class="current-and-next-now">
