--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -71,7 +71,7 @@
 							<iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed={{.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>
 						</div>
 					</div>
-					<a href="#">Listen to more shows on URY On Demand</a>
+					<a href="#">Listen to more shows on URY Player</a>
 				</div>
 			</div> <!-- /outer containter -->
 		{{end}}
