Added background for transparent show images

--- a/src/styles/elements/_index-schedule.scss
+++ b/src/styles/elements/_index-schedule.scss
@@ -15,6 +15,7 @@ $primary-color: rgba(0, 51, 103, 1);
 	  width: 100%;
 	  display: block;
 	  position: relative;
+    background: #022d59;
     }
     figcaption {
       position: absolute;
