Moved Next to use array of nexts

--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -14,7 +14,7 @@
 			{{if .Next}}
 				<div class="current-and-next-next">
 					<h2>Next</h2>
-					{{template "current_next" .Next}}
+					{{template "current_next" index .Next 0}}
 				</div>
 			{{end}}
 		</div>
