Footer is not a nav-bar, pull-right instead.

--- a/views/partials/footer.tmpl
+++ b/views/partials/footer.tmpl
@@ -1,7 +1,7 @@
 {{define "footer"}}
 	<footer class="container outer footer">
         	<div class="navbar-left"><a href="#">Disclaimer</a> | <a href="#">MyRadio</a> | <a href="#">Contact</a></div>
-        	<div class="navbar-right">
+        	<div class="pull-right">
 				<p>Copyright © 1967-2017 University Radio York. Designed by the <a href="mailto:webmaster@ury.org.uk" title="Click to email the Computing team.">URY Computing Team</a></p>
           	</div>
     </footer>
