--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
-$font-family-body: Roboto;
-$font-family-heading: "Raleway";
+$font-family-body: 'Roboto', sans-serif;
+$font-family-heading: 'Raleway', sans-serif;
 
 
 h1, h2, h3, h4, h5, h6 {
