--- a/sass/base/_buttons.scss
+++ b/sass/base/_buttons.scss
@@ -1,7 +1,8 @@
 .btn {
   border-radius: 0.4em;
   padding: 0.25em 1em;
-  font-family: Raleway-Medium;
+  font-family: $font-family-heading;
+  font-weight: 500;
   font-size: $base-font-size;
   box-shadow: 0px 2px 5px -1px rgba(0,0,0,0.75);
 
